--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
- <!--
+ 
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -11,7 +11,7 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    -->
+  
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -26,12 +26,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <!-- <title>React App</title>
+    <title>React App</title>
   </head>
   <body>
-    <h1>Welcome to </h1>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div> -->
+    <div id="root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -42,9 +41,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  <!-- </body> -->
-  <body>
+  <!-- <body>
     <li><a href="/labs/a1/index.html">labs a1</a></li>
     <li><a href="/labs/a2/index.html">labs a2</a></li>
     <li><a href="/Kanbas/Courses/Home/screen.html">KANABAS </a></body></li>
+    <div id="root"></div></body> -->
 </html>
